--- a/portfolio.html
+++ b/portfolio.html
@@ -356,7 +356,7 @@
             <ul class="list-style join-contact">
               <li class="icons-footer">
                 <a class="join-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="footer-icon" width="20" height="20">
                     <use
                       href="./images/icons.svg#icon-instagram"
                     ></use>
@@ -365,14 +365,14 @@
               </li>
               <li class="icons-footer">
                 <a class="join-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="footer-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="icons-footer">
                 <a class="join-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="footer-icon" width="20" height="20">
                     <use
                       href="./images/icons.svg#icon-facebook"
                     ></use>
@@ -381,7 +381,7 @@
               </li>
               <li class="icons-footer">
                 <a class="join-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="footer-icon" width="20" height="20">
                     <use
                       href="./images/icons.svg#icon-linkedin"
                     ></use>
