--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             <ul class="list-style join-contact">
               <li class="icons-footer">
                 <a class="join-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="footer-icon" width="20" height="20">
                     <use
                       href="./images/icons.svg#icon-instagram"
                     ></use>
@@ -488,14 +488,14 @@
               </li>
               <li class="icons-footer">
                 <a class="join-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="footer-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="icons-footer">
                 <a class="join-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="footer-icon" width="20" height="20">
                     <use
                       href="./images/icons.svg#icon-facebook"
                     ></use>
@@ -504,7 +504,7 @@
               </li>
               <li class="icons-footer">
                 <a class="join-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="footer-icon" width="20" height="20">
                     <use
                       href="./images/icons.svg#icon-linkedin"
                     ></use>
