--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             <address class="address">
               <ul class="footer-styles">
                 <li class="footer-links">
-                  <a
+                  <a class="address-link"
                     href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
