--- a/index.html
+++ b/index.html
@@ -5,23 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+      content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
-      crossorigin
-    />
+      crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -37,8 +33,7 @@
             <li class="nav-list">
               <a
                 href="./index.html"
-                class="link nav-link active-page"
-              >
+                class="link nav-link active-page">
                 Студія
               </a>
             </li>
@@ -151,8 +146,7 @@
                   src="./images/img-1.jpg"
                   alt="зображеня-1"
                   width="370"
-                  height="294"
-                />
+                  height="294" />
                 <p class="text-about">Десктопні додатки</p>
               </div>
             </li>
@@ -162,8 +156,7 @@
                   src="./images/img-2.jpg"
                   alt="зображеня-2"
                   width="370"
-                  height="294"
-                />
+                  height="294" />
                 <p class="text-about">Мобільні додатки</p>
               </div>
             </li>
@@ -173,8 +166,7 @@
                   src="./images/img-3.jpg"
                   alt="зображеня-3"
                   width="370"
-                  height="294"
-                />
+                  height="294" />
                 <p class="text-about">Дизайнерські рішення</p>
               </div>
             </li>
@@ -191,8 +183,7 @@
                 src="./images/igor.jpg"
                 alt="igor"
                 width="270"
-                height="260"
-              />
+                height="260" />
               <div class="internal">
                 <h3 class="titles-team">Ігор Дем'яненко</h3>
                 <p lang="en" class="profession">Product Designer</p>
@@ -201,8 +192,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                          href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -210,8 +200,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-twitter"
-                        ></use>
+                          href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -219,8 +208,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                          href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -228,8 +216,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                          href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -241,8 +228,7 @@
                 src="./images/olga.jpg"
                 alt="olga"
                 width="270"
-                height="260"
-              />
+                height="260" />
               <div class="internal">
                 <h3 class="titles-team">Ольга Рєпіна</h3>
                 <p lang="en" class="profession">Frontend Developer</p>
@@ -251,8 +237,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                          href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -260,8 +245,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-twitter"
-                        ></use>
+                          href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -269,8 +253,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                          href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -278,8 +261,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                          href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -291,8 +273,7 @@
                 src="./images/mykola.jpg"
                 alt="mykola"
                 width="270"
-                height="260"
-              />
+                height="260" />
               <div class="internal">
                 <h3 class="titles-team">Микола Тарасов</h3>
                 <p lang="en" class="profession">Marketing</p>
@@ -301,8 +282,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                          href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -310,8 +290,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-twitter"
-                        ></use>
+                          href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -319,8 +298,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                          href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -328,8 +306,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                          href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -341,8 +318,7 @@
                 src="./images/myhailo.jpg"
                 alt="myhailo"
                 width="270"
-                height="260"
-              />
+                height="260" />
               <div class="internal">
                 <h3 class="titles-team">Михайло Єрмаков</h3>
                 <p lang="en" class="profession">UI Designer</p>
@@ -351,8 +327,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                          href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -360,8 +335,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-twitter"
-                        ></use>
+                          href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -369,8 +343,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                          href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -378,8 +351,7 @@
                     <a class="team-link" href="">
                       <svg class="svg-team" width="20" height="20">
                         <use
-                          href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                          href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -450,7 +422,8 @@
             <address class="address">
               <ul class="footer-styles">
                 <li class="footer-links">
-                  <a class="address-link"
+                  <a
+                    class="address-link"
                     href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
@@ -481,8 +454,7 @@
                 <a class="join-link" href="">
                   <svg class="footer-icon" width="20" height="20">
                     <use
-                      href="./images/icons.svg#icon-instagram"
-                    ></use>
+                      href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -497,8 +469,7 @@
                 <a class="join-link" href="">
                   <svg class="footer-icon" width="20" height="20">
                     <use
-                      href="./images/icons.svg#icon-facebook"
-                    ></use>
+                      href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
@@ -506,13 +477,32 @@
                 <a class="join-link" href="">
                   <svg class="footer-icon" width="20" height="20">
                     <use
-                      href="./images/icons.svg#icon-linkedin"
-                    ></use>
+                      href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
+
+          <form class="footer-form-container">
+            <p class="title-form-footer">Підпишіться на розсилку</p>
+            <div class="input-footer">
+              <label>
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                  class="footer-form"
+                  required />
+              </label>
+              <button type="submit" class="footer-button">
+                Підписатися
+                <svg width="24" height="24" class="icon-form-footer">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
@@ -523,6 +513,71 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-title">
+          Залиште свої дані, ми вам передзвонимо
+        </p>
+        <div class="input-modal form-name">
+          <label class="label" for="name">Ім'я</label>
+          <div class="position">
+            <input
+              class="input-modal-form"
+              type="text"
+              name="name"
+              id="name"
+              required />
+            <svg class="icon-form" width="24" height="24">
+              <use href="./images/icons.svg#icon-person-black"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="input-modal form-tel">
+          <label class="label" for="tel">Телефон</label>
+          <div class="position">
+            <input
+              class="input-modal-form"
+              type="tel"
+              name="tel"
+              id="tel"
+              required />
+            <svg class="icon-form" width="12" height="12">
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="input-modal form-email">
+          <label class="label" for="email">Пошта</label>
+          <div class="position">
+            <input
+              class="input-modal-form"
+              type="email"
+              name="email"
+              id="email"
+              required />
+            <svg class="icon-form" width="12" height="12">
+              <use href="./images/icons.svg#icon-email-black"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="input-modal fornm-comment">
+          <label>Коментар<textarea
+              class="input-modal-form comment"
+              name="comment"
+              placeholder="Введіть текст"></textarea>
+          </label>
+        </div>
+        <div class="checkbox">
+          <label class="title-checkbox"><input
+              class="checkbox-item visually-hidden"
+              type="checkbox"
+              name="agree" /><span class="checkbox-icon"></span>
+            Погоджуюся з розсилкою та приймаю<a
+              href=""
+              class="modal-link">
+              Умови договору</a></label>
+          <button type="submit" class="send-button">
+            Відправити
+          </button>
+        </div>
       </div>
     </div>
     <script src="./modal.js"></script>
