--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
         <p class="modal-title">
           Залиште свої дані, ми вам передзвонимо
         </p>
+        <form class="modal-form">
         <div class="input-modal form-name">
           <label class="label" for="name">Ім'я</label>
           <div class="position">
@@ -577,6 +578,7 @@
           <button type="submit" class="send-button">
             Відправити
           </button>
+          </form>
         </div>
       </div>
     </div>
