--- a/index.html
+++ b/index.html
@@ -582,6 +582,6 @@
         </div>
       </div>
     </div>
-    <script src="./modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
